<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="viewModel"
            type="com.regula.formtask.pages.MandateDetailsViewModel" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_mandate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mandate_details"
                android:textSize="@dimen/sp_17"
                android:gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_32"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_32"
                android:layout_marginHorizontal="@dimen/dp_16"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_ach_amt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:hint="@string/ach_amt"
                    android:inputType="number"
                    android:text="@={viewModel.ach_amt}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginHorizontal="@dimen/dp_16"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_mandate_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:hint="@string/mandate_date"
                    android:text="@={viewModel.mandate_date}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginHorizontal="@dimen/dp_16"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_start_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:hint="@string/start_date"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:text="@={viewModel.start_date}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginHorizontal="@dimen/dp_16"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_end_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:hint="@string/end_date"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:text="@={viewModel.end_date}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingVertical="@dimen/dp_10"
                android:paddingHorizontal="@dimen/dp_16"
                android:text="@string/or"/>

            <CheckBox
                android:id="@+id/chkbx_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dp_16"
                android:text="@string/until_cancelled"
                android:textSize="@dimen/sp_14"
                android:paddingHorizontal="@dimen/dp_6"
                android:checked="true"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginHorizontal="@dimen/dp_16">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_reference_no"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/white"
                    android:hint="@string/reference_number"
                    android:text="@={viewModel.ref_no}"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/dp_16">

            <Button
                android:id="@+id/btn_back"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_12"
                android:backgroundTint="@color/button_color"
                android:layout_marginHorizontal="@dimen/dp_6"
                android:onClick="@{(v) -> viewModel.goClick()}"/>

            <Button
                android:id="@+id/edt_btn_nach_generate"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:backgroundTint="@color/button_color"
                android:text="@string/nach_generate"
                android:textSize="@dimen/sp_12"
                android:layout_marginEnd="@dimen/dp_6"
                android:onClick="@{(v) -> viewModel.goClick()}"/>

        </LinearLayout>

    </RelativeLayout>
</layout>