<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="viewModel"
            type="com.regula.formtask.pages.AllDetailsViewModel" />
    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/dp_16"
                android:text="All Details"
                android:gravity="center_horizontal"
                android:textSize="@dimen/sp_21"
                android:layout_marginTop="@dimen/dp_16"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginHorizontal="@dimen/dp_16">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/loan_number"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_loan_no"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.loan_id}"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginHorizontal="@dimen/dp_16">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/benificiary_name"/>

                <TextView
                    android:id="@+id/tv_benef_name"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.benef_name}"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginHorizontal="@dimen/dp_16">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/customer_mobile"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_cust_mob"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.cust_mob}"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginHorizontal="@dimen/dp_16">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/customer_email"/>

                <TextView
                    android:id="@+id/tv_cust_email"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.cust_email}"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginHorizontal="@dimen/dp_16">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/ifsc_code"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_ifsc_code"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.ifsc_code}"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginHorizontal="@dimen/dp_16">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/cust_bank"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_cust_bank"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.cust_bank}"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginHorizontal="@dimen/dp_16">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/bank_add"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_bank_add"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.cust_bank_add}"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginHorizontal="@dimen/dp_16">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/cust_acc_no"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_acc_no"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.cust_acc_no}"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginHorizontal="@dimen/dp_16">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/accc_type"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_acc_type"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.cust_acc_type}"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginHorizontal="@dimen/dp_16">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/category"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_category"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.category}"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginHorizontal="@dimen/dp_16">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/freq"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_freq"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.frequency}"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginHorizontal="@dimen/dp_16">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/ach_amt"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_ach_amt"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.ach_amt}"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginHorizontal="@dimen/dp_16">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/mandate_date"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_mndt_date"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.mandate_date}"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginHorizontal="@dimen/dp_16">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/start_date"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_start_date"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.start_date}"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginHorizontal="@dimen/dp_16">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/end_date"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/end_date"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.end_date}"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_16"
                android:visibility="gone"
                android:layout_marginHorizontal="@dimen/dp_16">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/until_cancelled"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_chkbx_sts"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.ref_no}"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginHorizontal="@dimen/dp_16">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/reference_number"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_ref_no"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</layout>