<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="viewModel"
            type="com.regula.formtask.pages.PersonalDetailsViewModel" />
    </data>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/personal_details"
            android:textSize="@dimen/sp_17"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_32"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_32"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:hint="@string/loan_number"
            app:counterEnabled="true"
            app:counterMaxLength="100"
            android:enabled="true"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loan_no"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:inputType="text"
                android:text="@={viewModel.loan_id}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_18"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:hint="@string/benificiary_name"
            app:counterEnabled="true"
            app:counterMaxLength="500"
            android:enabled="true"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/benef_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:inputType="text"
                android:text="@={viewModel.benef_name}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_18"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:hint="@string/customer_mobile"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            android:enabled="true"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cust_mob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:maxLength="10"
                android:inputType="number"
                android:text="@={viewModel.cust_mob}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_18"
            android:layout_marginHorizontal="@dimen/dp_16"
            android:hint="@string/customer_email"
            app:counterEnabled="true"
            app:counterMaxLength="80"
            app:hintEnabled="true"
            android:enabled="true"
            android:clipChildren="false"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cust_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.cust_email}"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_24"
        android:backgroundTint="@color/button_color"
        android:text="@string/next"
        android:textColor="@color/black"
        android:onClick="@{(v) -> viewModel.goClick()}"/>

</RelativeLayout>
</layout>